--- a/module_home/src/main/res/layout/home_frag_mine.xml
+++ b/module_home/src/main/res/layout/home_frag_mine.xml
@@ -73,14 +73,15 @@
                         app:layout_constraintDimensionRatio="360:167"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent"
+                        />
 
-                <!--头像-->
+                <!--头像//@mipmap/def_circle_a-->
                 <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                         android:id="@+id/iv_avatar"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:src="@mipmap/def_circle_a"
+                        android:src="@{viewModel.image}"
                         android:clickable="true"
                         android:focusable="true"
                         android:layout_marginStart="@dimen/gap_size8"
@@ -108,6 +109,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toEndOf="@id/iv_avatar"
                         app:layout_constraintTop_toTopOf="@id/iv_avatar"
+                        android:text="@{viewModel.loginName}"
                         tools:text="@string/home_mine_notlogin"/>
 
                 <!--会员状态-->
@@ -158,6 +160,7 @@
                             app:layout_constraintEnd_toStartOf="@id/tv_chainnum_tip"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
+                            android:text="@{viewModel.chainid}"
                             tools:text="@string/home_format_chainid"/>
 
                     <TextView
@@ -184,6 +187,7 @@
                         android:textSize="@dimen/tx_size14"
                         app:layout_constraintStart_toEndOf="@id/iv_avatar"
                         app:layout_constraintTop_toBottomOf="@id/iv_avatar"
+                        android:text="@{viewModel.fans}"
                         tools:text="@string/home_format_fans"/>
 
                 <!--轮播图-->
