--- a/module_system/src/main/res/layout/system_activity_feedback.xml
+++ b/module_system/src/main/res/layout/system_activity_feedback.xml
@@ -45,10 +45,12 @@
                 app:layout_constraintDimensionRatio="333:190"
                 app:layout_constraintTop_toBottomOf="@id/layout_title"
                 android:background="@drawable/shape_btnbg_o"
-                android:gravity="top|left"
+                android:gravity="top"
                 android:maxLength="300"
+                android:inputType="textMultiLine"
+                android:hint="@string/system_feedback_input_hint"
                 style="@style/text_13_333333"
-                tools:ignore="Autofill,LabelFor,TextFields"/>
+                />
 
         <TextView
                 style="@style/text_13_999999"
@@ -81,7 +83,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_title"
                 app:layout_constraintRight_toLeftOf="@id/iv_photo2"
-                app:url="@{viewModel.photo1}"
+                android:src="@{viewModel.photo1}"
                 app:placeholderRes="@mipmap/system_rectangle"
                 android:contentDescription="@string/image_description_default"/>
 
@@ -94,7 +96,7 @@
                 app:layout_constraintRight_toLeftOf="@+id/iv_photo3"
                 app:layout_constraintTop_toTopOf="@id/iv_photo1"
                 android:layout_marginStart="@dimen/gap_size13"
-                app:url="@{viewModel.photo2}"
+                android:src="@{viewModel.photo2}"
                 app:placeholderRes="@mipmap/system_rectangle"
                 android:contentDescription="@string/image_description_default"/>
 
@@ -108,7 +110,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginEnd="@dimen/gap_size26"
                 android:layout_marginStart="@dimen/gap_size13"
-                app:url="@{viewModel.photo3}"
+                android:src="@{viewModel.photo3}"
                 app:placeholderRes="@mipmap/system_rectangle"
                 android:contentDescription="@string/image_description_default"/>
 
@@ -155,6 +157,7 @@
                 android:layout_marginTop="87dp"
                 android:layout_marginStart="@dimen/gap_size29"
                 android:layout_marginEnd="@dimen/gap_size29"
-                tools:ignore="MissingConstraints"/>
+                tools:ignore="MissingConstraints"
+                android:enabled="@{viewModel.btnEnable}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
