--- a/module_main/src/main/res/drawable/main_selector_btn_test.xml
+++ b/module_main/src/main/res/drawable/main_selector_btn_test.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
+            <solid android:color="@color/color_orange" />
             <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/color_orange" />
             <corners android:radius="5dp" />
         </shape>
     </item>
