--- a/module_main/src/main/res/layout/main_activity_guide.xml
+++ b/module_main/src/main/res/layout/main_activity_guide.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+        >
 
     <cn.bingoogolapple.bgabanner.BGAGuideLinkageLayout
             android:layout_width="match_parent"
@@ -15,6 +15,8 @@
                 android:layout_height="match_parent"
                 app:banner_pageChangeDuration="1000"
                 app:banner_pointAutoPlayAble="false"
+                app:banner_pointContainerBackground="@android:color/transparent"
+                app:banner_pointDrawable="@android:color/transparent"
                 app:banner_pointTopBottomMargin="15dp"
                 app:banner_transitionEffect="fade"/>
 
@@ -25,8 +27,7 @@
                 app:banner_pageChangeDuration="1000"
                 app:banner_pointAutoPlayAble="false"
                 app:banner_pointContainerBackground="@android:color/transparent"
-                app:banner_pointDrawable="@drawable/main_selector_banner_unequal"
-                android:visibility="gone"
+                app:banner_pointDrawable="@android:color/transparent"
                 app:banner_pointTopBottomMargin="15dp"
                 app:banner_transitionEffect="alpha"/>
     </cn.bingoogolapple.bgabanner.BGAGuideLinkageLayout>
@@ -45,17 +46,18 @@
             android:textSize="16sp"/>
 
     <Button
-            android:id="@+id/btn_guide_enter"
+            android:id="@+id/btn_guide_into"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="60dp"
+            android:layout_marginBottom="120dp"
             android:background="@drawable/main_selector_btn_test"
-            android:padding="8dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:text="立即体验"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:visibility="gone"
-            tools:visibility="visible"/>
+            android:textSize="@dimen/tx_size16"/>
 </RelativeLayout>
