导航栏适配 图片上传 商品详情适配

--- a/library_res/src/main/res/values/config_string.xml
+++ b/library_res/src/main/res/values/config_string.xml
@@ -101,4 +101,12 @@
         <item>grade_asc</item>
         <item>grade_desc</item>
     </string-array>
+
+    //上传图片的业务场景
+    <string-array name="scene_type">
+        <item>goods</item>
+        <item>shop</item>
+        <item>member</item>
+        <item>other</item>
+    </string-array>
 </resources>
