--- a/library_res/src/main/res/values/styles.xml
+++ b/library_res/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@style/QMUI.Compat">
+    <style name="AppMainTheme" parent="@style/QMUI.Compat.NoActionBar">
         <!--将ActionBar隐藏,这里使用ToolBar-->
         <item name="windowActionBar">false</item>
         <!-- 使用 API Level 22以上编译的话，要拿掉前綴字 -->
@@ -8,21 +8,15 @@
         <!--colorPrimary 对应ToolBar的颜色-->
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <!--colorPrimaryDark对应状态栏的颜色-->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorAccent</item>
         <!--colorAccent 对应EditText编辑时、RadioButton选中、CheckBox等选中时的颜色。-->
         <item name="colorAccent">@color/colorAccent</item>
+        <!--导航栏颜色-->
+        <item name="android:navigationBarColor">@color/colorAccent</item>
         <item name="android:windowBackground">@color/appbg_color</item>
 
         <!-- 配置qmui提供的theme -->
         <item name="QMUITopBarStyle">@style/QDTopBar</item>
-    </style>
-
-    <!--状态栏透明-->
-    <style name="MainTheme.TranslucentTheme" parent="AppTheme">
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-        <!--Android 5.x开始需要把颜色设置透明，否则导航栏会呈现系统默认的浅灰色-->
-        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <!--标题-->
