--- a/module_main/src/main/res/layout/main_activity_main.xml
+++ b/module_main/src/main/res/layout/main_activity_main.xml
@@ -10,9 +10,11 @@
     </data>
 
     <android.support.v4.widget.SwipeRefreshLayout
+            android:fitsSystemWindows="true"
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
