--- a/module_goods/src/main/res/layout/goods_activity_product_details.xml
+++ b/module_goods/src/main/res/layout/goods_activity_product_details.xml
@@ -55,33 +55,46 @@
                         app:layout_constraintTop_toBottomOf="@id/view_banner"/>
 
                 <!--价格-->
+                <ImageView
+                        android:id="@+id/iv_flag_price1"
+                        android:layout_width="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="@dimen/gap_size10"
+                        app:layout_constraintTop_toTopOf="@id/tv_price1"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_price1"
+                        android:layout_height="wrap_content"/>
+
                 <TextView
                         android:id="@+id/tv_price1"
                         android:layout_width="wrap_content"
-                        android:drawableStart="@mipmap/goods_detail_diamond_a"
-                        android:drawablePadding="@dimen/gap_size4"
                         android:textColor="@color/tx_colore"
-                        android:layout_marginStart="@dimen/gap_size10"
+                        android:layout_marginStart="@dimen/gap_size8"
                         android:textSize="23sp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/gap_size24"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/iv_flag_price1"
                         android:text="@{String.valueOf(viewModel.dPrice)}"
                         app:layout_constraintTop_toBottomOf="@id/view_banner"
                         tools:text="300.00"/>
 
+                <ImageView
+                        android:id="@+id/iv_flag_price2"
+                        android:layout_width="wrap_content"
+                        android:layout_marginStart="@dimen/gap_size12"
+                        app:layout_constraintTop_toTopOf="@id/tv_price2"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_price2"
+                        app:layout_constraintStart_toEndOf="@id/tv_price1"
+                        android:layout_height="wrap_content"/>
+
                 <TextView
                         android:id="@+id/tv_price2"
                         android:layout_width="wrap_content"
-                        android:drawableStart="@mipmap/goods_detail_diamond_b"
-                        android:drawablePadding="@dimen/gap_size4"
                         android:textColor="@color/tx_colord"
-                        android:layout_marginStart="@dimen/gap_size10"
+                        android:layout_marginStart="@dimen/gap_size5"
                         android:textSize="@dimen/tx_size13"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/gap_size24"
                         app:layout_constraintBaseline_toBaselineOf="@id/tv_price1"
-                        app:layout_constraintStart_toEndOf="@id/tv_price1"
+                        app:layout_constraintStart_toEndOf="@id/iv_flag_price2"
                         android:text="@{String.valueOf(viewModel.oPrice)}"
                         tools:text="300.00"/>
 
