--- a/module_order/src/main/res/layout/order_activity_orderconfirm_b.xml
+++ b/module_order/src/main/res/layout/order_activity_orderconfirm_b.xml
@@ -3,9 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="viewModel"
-                  type="com.lcworld.module_order.viewmodel.OrderConfirmBViewModel"/>
+
+        <variable
+                name="viewModel"
+                type="com.lcworld.module_order.viewmodel.OrderConfirmBViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -68,12 +71,13 @@
                 app:layout_constraintEnd_toEndOf="@id/gline_end"
                 app:layout_constraintTop_toTopOf="@id/bg_salesvolume">
 
-            <View android:id="@+id/bg_sub"
-                  android:layout_height="0dp"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_width="@dimen/gap_size21"/>
+            <View
+                    android:id="@+id/bg_sub"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="@dimen/gap_size21"/>
 
             <View
                     android:id="@+id/line_sub"
@@ -114,13 +118,14 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
-            <View android:id="@+id/bg_add"
-                  android:layout_height="0dp"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:onClickCommand="@{viewModel.clickOfPlus}"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintStart_toEndOf="@id/et_quantity_value"
-                  android:layout_width="@dimen/gap_size21"/>
+            <View
+                    android:id="@+id/bg_add"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:onClickCommand="@{viewModel.clickOfPlus}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/et_quantity_value"
+                    android:layout_width="@dimen/gap_size21"/>
 
             <TextView
                     android:id="@+id/tv_operate_sub"
@@ -193,7 +198,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/bg_cycle"
                 app:layout_constraintEnd_toEndOf="@id/gline_end"
                 app:layout_constraintTop_toTopOf="@id/bg_cycle"
-        />
+                />
 
         <!--结算时间-->
         <View
@@ -306,6 +311,7 @@
                 android:layout_marginTop="@dimen/gap_size1"
                 app:layout_constraintDimensionRatio="360:43"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:onClickCommand="@{viewModel.clickOfContractDetail}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/bg_diamond"/>
 
@@ -325,7 +331,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:button="@drawable/selector_cbox_c"
-                android:checked="@={viewModel.uc.checkCompact}"
+                android:checked="true"
+                android:enabled="false"
                 android:paddingEnd="@dimen/gap_size17"
                 app:layout_constraintBottom_toBottomOf="@id/bg_contract"
                 app:layout_constraintEnd_toEndOf="parent"
