--- a/module_goods/src/main/res/layout/goods_frag_property_dialog.xml
+++ b/module_goods/src/main/res/layout/goods_frag_property_dialog.xml
@@ -213,13 +213,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_buynum_desc"
                 android:layout_marginTop="69dp"
-                android:background="@drawable/shape_btnbg_n"
+                android:background="@drawable/selector_btnbg_a"
                 android:textColor="@color/white"
                 android:textSize="@dimen/tx_size15"
                 android:text="@string/goods_product_sure"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="@dimen/gap_size15"
-                android:layout_height="45dp"/>
+                android:layout_height="40dp"/>
     </android.support.constraint.ConstraintLayout>
 
 
